--- a/package.json
+++ b/package.json
@@ -9,12 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "ethers": "^6.0.2",
+    "graphql": "^16.6.0",
+    "magic-sdk": "^13.1.0",
+    "moralis": "^2.12.0",
+    "moralis-v1": "^1.12.0",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
+    "web3connect": "^1.0.0-beta.33",
+    "web3uikit": "^1.0.4"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6"
+    "eslint-config-next": "13.1.6",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
